--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_REACT_APP_API_URL=http://10.0.0.14:8045
+VITE_REACT_APP_API_URL=https://ettservice.azurewebsites.net
 VITE_REACT_APP_AZURE_CLIENT_ID=dd06e596-9228-4d64-8ade-7eaa9592bf46
 VITE_REACT_APP_AZURE_TENANT_ID=18b4eaca-948e-4446-ae65-f31448996fe3
