--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@azure/msal-react": "^2.0.8",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "framer-motion": "^10.16.16",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
