--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.16.16",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-quill": "^2.0.0",
