--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0"
   },
