--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-quill": "^2.0.0",
