--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.21.0",
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.25.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
