--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "moment": "^2.29.4",
+    "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-d3-tree": "^3.6.2",
