--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ VITE_WEBSOCKET_URL=https://ettservice-serviceslot.azurewebsites.net/Message
 # VITE_WEBSOCKET_URL=https://ipziqnguaswa002.azurewebsites.net/Message
 
 VITE_OPENID_CLIENT_ID=urn:ipziqnguaswa001.azurewebsites.net
-VITE_OPENID_AUTHORITY=https://login-stg.pwc.com/
-VITE_OPENID_REDIRECT_URL=https://ipziqnguaswa002.azurewebsites.net
+VITE_OPENID_AUTHORITY=https://login-stg.pwc.com/openam/oauth2
+VITE_OPENID_REDIRECT_URL=https://ipziqnguaswa001.azurewebsites.net
 
 
