--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-# VITE_REACT_APP_API_URL=https://ettservice.azurewebsites.net
-# VITE_REACT_APP_AZURE_CLIENT_ID=dd06e596-9228-4d64-8ade-7eaa9592bf46
-# VITE_REACT_APP_AZURE_TENANT_ID=18b4eaca-948e-4446-ae65-f31448996fe3
-
-# VITE_WEBSOCKET_URL=https://ettservice.azurewebsites.net/Message
-
-
-# dev
-VITE_REACT_APP_API_URL=https://ettservice-serviceslot.azurewebsites.net
+VITE_REACT_APP_API_URL=https://ettservice.azurewebsites.net
 VITE_REACT_APP_AZURE_CLIENT_ID=dd06e596-9228-4d64-8ade-7eaa9592bf46
 VITE_REACT_APP_AZURE_TENANT_ID=18b4eaca-948e-4446-ae65-f31448996fe3
 
-VITE_WEBSOCKET_URL=https://ettservice-serviceslot.azurewebsites.net/Message
+VITE_WEBSOCKET_URL=https://ettservice.azurewebsites.net/Message
+
+
+# dev
+# VITE_REACT_APP_API_URL=https://ettservice-serviceslot.azurewebsites.net
+# VITE_REACT_APP_AZURE_CLIENT_ID=dd06e596-9228-4d64-8ade-7eaa9592bf46
+# VITE_REACT_APP_AZURE_TENANT_ID=18b4eaca-948e-4446-ae65-f31448996fe3
+
+# VITE_WEBSOCKET_URL=https://ettservice-serviceslot.azurewebsites.net/Message
 
 # PWC UAT
 # VITE_REACT_APP_API_URL=https://ipziqnguaswa002.azurewebsites.net
