--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "html-to-image": "^1.11.11",
     "moment": "^2.29.4",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
