--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dompurify": "^3.0.8",
     "framer-motion": "^10.16.16",
     "html-to-image": "^1.11.11",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
