--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-d3-tree": "^3.6.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-loader-spinner": "^6.1.6",
     "react-pdf": "^7.7.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
