--- a/.env
+++ b/.env
@@ -21,5 +21,6 @@ VITE_WEBSOCKET_URL=https://ettservice.azurewebsites.net/Message
 VITE_OPENID_CLIENT_ID=urn:ipziqnguaswa001.azurewebsites.net
 VITE_OPENID_AUTHORITY=https://login-stg.pwc.com/openam/oauth2
 VITE_OPENID_REDIRECT_URL=https://ipziqnguaswa001.azurewebsites.net
+VITE_OPENID_CLIENT_SECRET=XgxHVI5CESnhtMDN9fje
 
 
