--- a/.env
+++ b/.env
@@ -22,5 +22,6 @@ VITE_OPENID_CLIENT_ID=urn:ipziqnguaswa001.azurewebsites.net
 VITE_OPENID_AUTHORITY=https://login-stg.pwc.com/openam/oauth2
 VITE_OPENID_REDIRECT_URL=https://ipziqnguaswa001.azurewebsites.net
 VITE_OPENID_CLIENT_SECRET=XgxHVI5CESnhtMDN9fje
+VITE_OPENID_ENDPOINT_URL=https://login-stg.pwc.com/openam/oauth2/connect/endSession
 
 
