--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@microsoft/signalr": "^8.0.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "dompurify": "^3.0.8",
     "framer-motion": "^10.16.16",
     "html-to-image": "^1.11.11",
