--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dompurify": "^3.0.8",
     "framer-motion": "^10.16.16",
     "html-to-image": "^1.11.11",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "oidc-react": "^3.2.2",
