QA[validate username reverted]resolved

--- a/.env
+++ b/.env
@@ -24,4 +24,4 @@ VITE_OPENID_REDIRECT_URL=https://ipziqnguaswa001.azurewebsites.net
 VITE_OPENID_CLIENT_SECRET=XgxHVI5CESnhtMDN9fje
 VITE_OPENID_ENDPOINT_URL=https://login-stg.pwc.com/openam/oauth2/connect/endSession
 VITE_Encr= 2686700AF7AD49B0B75C8F1F5DB6CA54
-VITE_CUSTOM_LOGIN_DISABLED = true
+VITE_CUSTOM_LOGIN_DISABLED = false
