--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "react-tooltip": "^5.25.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "vite-plugin-remove-console": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
